--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
-  "name": "note_app",
-  "version": "1.0.3",
-  "description": "",
+  "name": "note-app-api",
+  "version": "1.1.0",
+  "description": "NoteApp API with NodeJS & ExpressJS",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Sam1D/NoteApp-API.git"
   },
   "keywords": [],
   "author": "Sam1Dz",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "pg": "^8.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.6.0"
   }
 }
