Updated Category API

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 API_PORT = 8011
+BASE_URI = /notes/v1
+
+PG_USER = postgres
+PG_PASSWORD = password
+PG_HOST = localhost
+PG_DATABASE = notes_db
+PG_PORT = 5432
